--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "724-events",
+  "homepage": "https://dimitous.github.io/724events/",
+
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,7 +21,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "lint": "eslint .eslintrc.js ./src",
-    "format": "prettier ./src --write"
+    "format": "prettier ./src --write",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
